store-app/k8s/notifications-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifications-api
  namespace: store-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notifications-api
  template:
    metadata:
      labels:
        app: notifications-api
    spec:
      containers:
      - name: notifications-api
        image: andy111223/notifications-api:latest
        ports:
        - containerPort: 5001
