store-app/k8s/products-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-api
  namespace: store-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: products-api
  template:
    metadata:
      labels:
        app: products-api
    spec:
      containers:
      - name: products-api
        image: andy111223/products-api:latest
        ports:
        - containerPort: 8080
