store-app/k8s/store-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-frontend
  namespace: store-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: store-frontend
  template:
    metadata:
      labels:
        app: store-frontend
    spec:
      containers:
      - name: store-frontend
        image: andy111223/store-frontend:latest
        ports:
        - containerPort: 3000
