store-app/k8s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: store-app
spec:
  ports:
  - port: 3306
  selector:
    app: mysql
  clusterIP: None
