store-app/k8s/notifications-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notifications-api
  namespace: store-app
spec:
  type: ClusterIP
  ports:
  - port: 5001
    targetPort: 5001
  selector:
    app: notifications-api
