store-app/k8s/products-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: products-api
  namespace: store-app
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: products-api
