store-app/k8s/store-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: store-frontend
  namespace: store-app
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: store-frontend
